# SQLite-based-Rust-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rust_items_api.postman_collection.json
logs/: app.log.2025-12-29
migrations/: 01_create_items_table.sql
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs
src/api/: items.rs  mod.rs  router.rs
src/db/: init.rs  mod.rs  queries.rs
src/models/: item.rs
src/services/: item_service.rs  mod.rs
tests/: api_items.rs  common.rs  db_items.rs  service_items.rs
