[package]
name = "SQLite-based-Rust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }

tracing = "0.1"
tracing-subscriber = "0.3"

dotenvy = "0.15"